5/21/1999
	- 0.9.4 released
	- fixed the same round-robin bug, hopefully correctly this time

5/17/1999
	- 0.9.3 released

5/16/1999
	- fixed a round-robin bug

5/14/1999
	- 0.9.2 released
	- Resolver routines now return Exceptions instead of null.

5/13/1999
	- split WorkerThread into WorkerThread and ResolveThread

4/25/1999	
	- moved files to org.xbill.DNS
	- Cache round-robins RRsets before handing them out
	- changed the way ExtendedResolver decides when to send queries
	- various reflection changes

4/21/1999	
	- minor WorkerThread fixes

4/19/1999	
	- 0.9.1 released
	- WorkerThreads should die after 15 minutes of idle time
	- Address.getByName/getAllByName handle dotted quad IP addresses

4/18/1999	
	- 0.9 released
	- Finished javadoc-ing classes in DNS.*
	- Server should work now
	- Zone/Cache response updates
	- Zone/Cache accesses should be more thread-safe

4/17/1999
	- The Cache supports ANY queries
	- More javadoc-ed classes in DNS.*
	- implemented toWireCanonical for record types that need it
	- Message.toString should print better output for update messages

4/16/1999
	- jnamed wasn't looking up non-ANY queries correctly in a zone
	- SimpleResolver should use TCP if query length is longer than UDP
		packet size
	- More javadoc-ed classes in DNS.*
	- MyStringTokenizer moved to DNS.utils

4/15/1999
	- More javadoc-ed classes in DNS.*
	- Moved functions from DNS.IO to DNS.utils.base64 and DNS.Master
	- Implemented search path for dns.getRecords functions
	- 0.8.3 released
	- Restrict number of WorkerThreads to 10
	- ExtendedResolver timer code fixes
	- ExtendedResolver race condition fix

4/14/1999
	- ExtendedResolver reentrancy fixes
	- Names are marked as qualified/unqualified
	- FindServer looks for search path from -Ddns.search1, etc.
		and in /etc/resolv.conf

4/13/1999
	- 0.8.2 released
	- More javadoc-ed classes in DNS.*
	- The message ID stuff from 4/10 broke TSIG, so it's gone
	- Changes to ExtendedResolver's handling of child Resolvers